--- a/frontend/src/infrastructure/dimensions/dimension.module.scss
+++ b/frontend/src/infrastructure/dimensions/dimension.module.scss
@@ -12,4 +12,10 @@ $style-border: solid;
 
 $size-padding-medium: 15px;
 
-$size-border-radius: 5px;
+$size-border-radius-medium: 5px;
+
+$size-icon-extraSmall: $size-text-extraSmall;
+$size-icon-small: $size-text-small;
+$size-icon-medium: $size-text-medium;
+$size-icon-large: $size-text-large;
+$size-icon-extraLarge: $size-text-extraLarge;
