--- a/frontend/src/infrastructure/colors/color.module.scss
+++ b/frontend/src/infrastructure/colors/color.module.scss
@@ -1,6 +1,6 @@
 $black: #2d2d2d;
 $gray: #aaaaaa;
-$white: rgb(255, 255, 255);
+$color-accent: rgb(255, 255, 255);
 
 $color-primary: rgb(243, 167, 70);
 $color-secondary: rgb(249, 248, 113);
@@ -11,8 +11,8 @@ $color-danger: rgb(198, 91, 109);
 
 $color-text-primary: $color-primary;
 $color-text-secondary: rgb(194, 172, 249);
-$color-text-accent: $white;
-$color-text-light: $white;
+$color-text-accent: $color-accent;
+$color-text-light: $color-accent;
 $color-text-dark: rgb(129, 129, 59);
 
 $color-background-primary: rgb(40, 25, 53);
