Refactoring directory. Added strong typing in places.

--- a/frontend/src/components/Navigation/Navigation.module.scss
+++ b/frontend/src/components/Navigation/Navigation.module.scss
@@ -28,7 +28,7 @@
   color: $color-text-primary;
   padding: $size-padding-medium;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .active > svg > path {
