--- a/frontend/src/infrastructure/colors/color.module.scss
+++ b/frontend/src/infrastructure/colors/color.module.scss
@@ -26,4 +26,4 @@ $color-success-t: rgba(46, 158, 131, 0.2);
 $color-warning-t: rgba(249, 248, 113, 0.2);
 $color-danger-t: rgba(198, 91, 109, 0.2);
 
-$color-border: rgb(87,62,115);
+$color-border: rgb(87, 62, 115);
